// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript > typescript 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules/**",
      "built/**",
      "tests/**",
      "lib/**",
      "src/lib/*.generated.d.ts",
      "scripts/**/*.js",
      "scripts/**/*.d.*",
      "internal/**",
      "coverage/**",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
          "**/*.mts",
          "**/*.cts",
        ],
        "rules": {
          "constructor-super": "off",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "**/*.mjs",
          "**/*.mts",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "__filename",
            },
            {
              "name": "__dirname",
            },
            {
              "name": "require",
            },
            {
              "name": "module",
            },
            {
              "name": "exports",
            },
          ],
        },
      },
      {
        "files": [
          "src/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "setTimeout",
            },
            {
              "name": "clearTimeout",
            },
            {
              "name": "setInterval",
            },
            {
              "name": "clearInterval",
            },
            {
              "name": "setImmediate",
            },
            {
              "name": "clearImmediate",
            },
            {
              "name": "performance",
            },
          ],
        },
      },
      {
        "files": [
          "src/harness/**",
          "src/testRunner/**",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "src/lib/*.d.ts",
        ],
        "rules": {
          "no-restricted-globals": "off",
          "no-shadow-restricted-names": "off",
          "no-unused-vars": "off",
          "no-var": "off",
          "typescript/no-unsafe-function-type": "off",
          "typescript/no-wrapper-object-types": "off",
          "typescript/prefer-function-type": "off",
          "typescript/unified-signatures": "off",
        },
      },
      {
        "files": [
          "src/lib/es2019.array.d.ts",
        ],
        "rules": {
          "typescript/array-type": "off",
        },
      },
    ],
    "plugins": [
      "typescript",
    ],
    "rules": {
      "constructor-super": "error",
      "eqeqeq": "error",
      "for-direction": "error",
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowTernary": true,
        },
      ],
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": [
        "warn",
        {
          "argsIgnorePattern": "^(_+$|_[^_])",
          "varsIgnorePattern": "^(_+$|_[^_])",
        },
      ],
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "prefer-object-spread": "error",
      "preserve-caught-error": "error",
      "require-yield": "error",
      "typescript/adjacent-overload-signatures": "error",
      "typescript/array-type": "error",
      "typescript/ban-tslint-comment": "error",
      "typescript/consistent-type-assertions": "error",
      "typescript/consistent-type-definitions": "error",
      "typescript/no-confusing-non-null-assertion": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-for-of": "error",
      "typescript/prefer-function-type": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "regexp/confusing-quantifier",
      "regexp/control-character-escape",
      "regexp/match-any",
      "regexp/negation",
      "regexp/no-contradiction-with-assertion",
      "regexp/no-dupe-characters-character-class",
      "regexp/no-dupe-disjunctions",
      "regexp/no-empty-alternative",
      "regexp/no-empty-capturing-group",
      "regexp/no-empty-character-class",
      "regexp/no-empty-group",
      "regexp/no-empty-lookarounds-assertion",
      "regexp/no-empty-string-literal",
      "regexp/no-escape-backspace",
      "regexp/no-extra-lookaround-assertions",
      "regexp/no-invalid-regexp",
      "regexp/no-invisible-character",
      "regexp/no-lazy-ends",
      "regexp/no-legacy-features",
      "regexp/no-misleading-capturing-group",
      "regexp/no-misleading-unicode-character",
      "regexp/no-missing-g-flag",
      "regexp/no-non-standard-flag",
      "regexp/no-obscure-range",
      "regexp/no-optional-assertion",
      "regexp/no-potentially-useless-backreference",
      "regexp/no-super-linear-backtracking",
      "regexp/no-trivially-nested-assertion",
      "regexp/no-trivially-nested-quantifier",
      "regexp/no-unused-capturing-group",
      "regexp/no-useless-assertions",
      "regexp/no-useless-backreference",
      "regexp/no-useless-character-class",
      "regexp/no-useless-dollar-replacements",
      "regexp/no-useless-escape",
      "regexp/no-useless-flag",
      "regexp/no-useless-lazy",
      "regexp/no-useless-non-capturing-group",
      "regexp/no-useless-quantifier",
      "regexp/no-useless-range",
      "regexp/no-useless-set-operand",
      "regexp/no-useless-string-literal",
      "regexp/no-useless-two-nums-quantifier",
      "regexp/no-zero-quantifier",
      "regexp/optimal-lookaround-quantifier",
      "regexp/optimal-quantifier-concatenation",
      "regexp/prefer-character-class",
      "regexp/prefer-d",
      "regexp/prefer-plus-quantifier",
      "regexp/prefer-predefined-assertion",
      "regexp/prefer-question-quantifier",
      "regexp/prefer-range",
      "regexp/prefer-set-operation",
      "regexp/prefer-star-quantifier",
      "regexp/prefer-unicode-codepoint-escapes",
      "regexp/prefer-w",
      "regexp/simplify-set-operations",
      "regexp/sort-flags",
      "regexp/strict",
      "regexp/use-ignore-case",
    ],
    "not-implemented": [
      "no-useless-assignment",
      "prefer-regex-literals",
      "object-shorthand",
      "no-restricted-syntax",
      "@typescript-eslint/naming-convention",
      "local/only-arrow-functions",
      "local/argument-trivia",
      "local/no-in-operator",
      "local/debug-assert",
      "local/no-keywords",
      "local/jsdoc-format",
      "local/js-extensions",
      "local/no-array-mutating-method-expressions",
      "local/no-direct-import",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/consistent-return",
      "@typescript-eslint/consistent-type-exports",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-qualifier",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-readonly",
      "@typescript-eslint/prefer-readonly-parameter-types",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
      "@typescript-eslint/strict-void-return",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-type-assertion",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/promise-function-async",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-array-sort-compare",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/strict-boolean-expressions",
      "@typescript-eslint/switch-exhaustiveness-check",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "dot-notation",
      "no-return-await",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;

exports[`typescript --js-plugins > typescript--js-plugins 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules/**",
      "built/**",
      "tests/**",
      "lib/**",
      "src/lib/*.generated.d.ts",
      "scripts/**/*.js",
      "scripts/**/*.d.*",
      "internal/**",
      "coverage/**",
    ],
    "jsPlugins": [
      "eslint-plugin-regexp",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
          "**/*.mts",
          "**/*.cts",
        ],
        "rules": {
          "constructor-super": "off",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "**/*.mjs",
          "**/*.mts",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "__filename",
            },
            {
              "name": "__dirname",
            },
            {
              "name": "require",
            },
            {
              "name": "module",
            },
            {
              "name": "exports",
            },
          ],
        },
      },
      {
        "files": [
          "src/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "setTimeout",
            },
            {
              "name": "clearTimeout",
            },
            {
              "name": "setInterval",
            },
            {
              "name": "clearInterval",
            },
            {
              "name": "setImmediate",
            },
            {
              "name": "clearImmediate",
            },
            {
              "name": "performance",
            },
          ],
        },
      },
      {
        "files": [
          "src/harness/**",
          "src/testRunner/**",
        ],
        "jsPlugins": [
          "eslint-plugin-regexp",
        ],
        "rules": {
          "no-restricted-globals": "off",
          "regexp/no-super-linear-backtracking": "off",
        },
      },
      {
        "files": [
          "src/lib/*.d.ts",
        ],
        "rules": {
          "no-restricted-globals": "off",
          "no-shadow-restricted-names": "off",
          "no-unused-vars": "off",
          "no-var": "off",
          "typescript/no-unsafe-function-type": "off",
          "typescript/no-wrapper-object-types": "off",
          "typescript/prefer-function-type": "off",
          "typescript/unified-signatures": "off",
        },
      },
      {
        "files": [
          "src/lib/es2019.array.d.ts",
        ],
        "rules": {
          "typescript/array-type": "off",
        },
      },
    ],
    "plugins": [
      "typescript",
    ],
    "rules": {
      "constructor-super": "error",
      "eqeqeq": "error",
      "for-direction": "error",
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowTernary": true,
        },
      ],
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": [
        "warn",
        {
          "argsIgnorePattern": "^(_+$|_[^_])",
          "varsIgnorePattern": "^(_+$|_[^_])",
        },
      ],
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "prefer-object-spread": "error",
      "preserve-caught-error": "error",
      "regexp/confusing-quantifier": "warn",
      "regexp/control-character-escape": "error",
      "regexp/match-any": "error",
      "regexp/negation": "error",
      "regexp/no-contradiction-with-assertion": "error",
      "regexp/no-dupe-characters-character-class": "error",
      "regexp/no-dupe-disjunctions": "error",
      "regexp/no-empty-alternative": "warn",
      "regexp/no-empty-capturing-group": "error",
      "regexp/no-empty-character-class": "error",
      "regexp/no-empty-group": "error",
      "regexp/no-empty-lookarounds-assertion": "error",
      "regexp/no-empty-string-literal": "error",
      "regexp/no-escape-backspace": "error",
      "regexp/no-extra-lookaround-assertions": "error",
      "regexp/no-invalid-regexp": "error",
      "regexp/no-invisible-character": "error",
      "regexp/no-lazy-ends": "warn",
      "regexp/no-legacy-features": "error",
      "regexp/no-misleading-capturing-group": "error",
      "regexp/no-misleading-unicode-character": "error",
      "regexp/no-missing-g-flag": "error",
      "regexp/no-non-standard-flag": "error",
      "regexp/no-obscure-range": "error",
      "regexp/no-optional-assertion": "error",
      "regexp/no-potentially-useless-backreference": "warn",
      "regexp/no-super-linear-backtracking": "error",
      "regexp/no-trivially-nested-assertion": "error",
      "regexp/no-trivially-nested-quantifier": "error",
      "regexp/no-unused-capturing-group": "error",
      "regexp/no-useless-assertions": "error",
      "regexp/no-useless-backreference": "error",
      "regexp/no-useless-character-class": "error",
      "regexp/no-useless-dollar-replacements": "error",
      "regexp/no-useless-escape": "error",
      "regexp/no-useless-flag": "warn",
      "regexp/no-useless-lazy": "error",
      "regexp/no-useless-non-capturing-group": "error",
      "regexp/no-useless-quantifier": "error",
      "regexp/no-useless-range": "error",
      "regexp/no-useless-set-operand": "error",
      "regexp/no-useless-string-literal": "error",
      "regexp/no-useless-two-nums-quantifier": "error",
      "regexp/no-zero-quantifier": "error",
      "regexp/optimal-lookaround-quantifier": "warn",
      "regexp/optimal-quantifier-concatenation": "error",
      "regexp/prefer-character-class": "error",
      "regexp/prefer-d": "error",
      "regexp/prefer-plus-quantifier": "error",
      "regexp/prefer-predefined-assertion": "error",
      "regexp/prefer-question-quantifier": "error",
      "regexp/prefer-range": "error",
      "regexp/prefer-set-operation": "error",
      "regexp/prefer-star-quantifier": "error",
      "regexp/prefer-unicode-codepoint-escapes": "error",
      "regexp/prefer-w": "error",
      "regexp/simplify-set-operations": "error",
      "regexp/sort-flags": "error",
      "regexp/strict": "error",
      "regexp/use-ignore-case": "error",
      "require-yield": "error",
      "typescript/adjacent-overload-signatures": "error",
      "typescript/array-type": "error",
      "typescript/ban-tslint-comment": "error",
      "typescript/consistent-type-assertions": "error",
      "typescript/consistent-type-definitions": "error",
      "typescript/no-confusing-non-null-assertion": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-for-of": "error",
      "typescript/prefer-function-type": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [],
    "not-implemented": [
      "no-useless-assignment",
      "prefer-regex-literals",
      "object-shorthand",
      "no-restricted-syntax",
      "@typescript-eslint/naming-convention",
      "local/only-arrow-functions",
      "local/argument-trivia",
      "local/no-in-operator",
      "local/debug-assert",
      "local/no-keywords",
      "local/jsdoc-format",
      "local/js-extensions",
      "local/no-array-mutating-method-expressions",
      "local/no-direct-import",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/consistent-return",
      "@typescript-eslint/consistent-type-exports",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-qualifier",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-readonly",
      "@typescript-eslint/prefer-readonly-parameter-types",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
      "@typescript-eslint/strict-void-return",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-type-assertion",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/promise-function-async",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-array-sort-compare",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/strict-boolean-expressions",
      "@typescript-eslint/switch-exhaustiveness-check",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "dot-notation",
      "no-return-await",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;

exports[`typescript --type-aware > typescript--type-aware 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "off",
    },
    "env": {
      "builtin": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules/**",
      "built/**",
      "tests/**",
      "lib/**",
      "src/lib/*.generated.d.ts",
      "scripts/**/*.js",
      "scripts/**/*.d.*",
      "internal/**",
      "coverage/**",
    ],
    "options": {
      "typeAware": true,
    },
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
          "**/*.mts",
          "**/*.cts",
        ],
        "rules": {
          "constructor-super": "off",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "**/*.mjs",
          "**/*.mts",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "__filename",
            },
            {
              "name": "__dirname",
            },
            {
              "name": "require",
            },
            {
              "name": "module",
            },
            {
              "name": "exports",
            },
          ],
        },
      },
      {
        "files": [
          "src/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "setTimeout",
            },
            {
              "name": "clearTimeout",
            },
            {
              "name": "setInterval",
            },
            {
              "name": "clearInterval",
            },
            {
              "name": "setImmediate",
            },
            {
              "name": "clearImmediate",
            },
            {
              "name": "performance",
            },
          ],
          "typescript/no-unnecessary-type-assertion": "error",
        },
      },
      {
        "files": [
          "src/harness/**",
          "src/testRunner/**",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "src/lib/*.d.ts",
        ],
        "rules": {
          "no-restricted-globals": "off",
          "no-shadow-restricted-names": "off",
          "no-unused-vars": "off",
          "no-var": "off",
          "typescript/await-thenable": "off",
          "typescript/no-array-delete": "off",
          "typescript/no-base-to-string": "off",
          "typescript/no-confusing-void-expression": "off",
          "typescript/no-deprecated": "off",
          "typescript/no-duplicate-type-constituents": "off",
          "typescript/no-floating-promises": "off",
          "typescript/no-for-in-array": "off",
          "typescript/no-implied-eval": "off",
          "typescript/no-meaningless-void-operator": "off",
          "typescript/no-misused-promises": "off",
          "typescript/no-misused-spread": "off",
          "typescript/no-mixed-enums": "off",
          "typescript/no-redundant-type-constituents": "off",
          "typescript/no-unnecessary-boolean-literal-compare": "off",
          "typescript/no-unnecessary-template-expression": "off",
          "typescript/no-unnecessary-type-arguments": "off",
          "typescript/no-unnecessary-type-assertion": "off",
          "typescript/no-unsafe-argument": "off",
          "typescript/no-unsafe-assignment": "off",
          "typescript/no-unsafe-call": "off",
          "typescript/no-unsafe-enum-comparison": "off",
          "typescript/no-unsafe-function-type": "off",
          "typescript/no-unsafe-member-access": "off",
          "typescript/no-unsafe-return": "off",
          "typescript/no-unsafe-type-assertion": "off",
          "typescript/no-unsafe-unary-minus": "off",
          "typescript/no-wrapper-object-types": "off",
          "typescript/non-nullable-type-assertion-style": "off",
          "typescript/only-throw-error": "off",
          "typescript/prefer-function-type": "off",
          "typescript/prefer-includes": "off",
          "typescript/prefer-nullish-coalescing": "off",
          "typescript/prefer-promise-reject-errors": "off",
          "typescript/prefer-reduce-type-parameter": "off",
          "typescript/prefer-return-this-type": "off",
          "typescript/promise-function-async": "off",
          "typescript/related-getter-setter-pairs": "off",
          "typescript/require-array-sort-compare": "off",
          "typescript/require-await": "off",
          "typescript/restrict-plus-operands": "off",
          "typescript/restrict-template-expressions": "off",
          "typescript/return-await": "off",
          "typescript/strict-boolean-expressions": "off",
          "typescript/switch-exhaustiveness-check": "off",
          "typescript/unbound-method": "off",
          "typescript/unified-signatures": "off",
          "typescript/use-unknown-in-catch-callback-variable": "off",
        },
      },
      {
        "files": [
          "src/lib/es2019.array.d.ts",
        ],
        "rules": {
          "typescript/array-type": "off",
        },
      },
    ],
    "plugins": [
      "typescript",
    ],
    "rules": {
      "constructor-super": "error",
      "eqeqeq": "error",
      "for-direction": "error",
      "no-array-constructor": "error",
      "no-async-promise-executor": "error",
      "no-caller": "error",
      "no-class-assign": "error",
      "no-compare-neg-zero": "error",
      "no-const-assign": "error",
      "no-constant-binary-expression": "error",
      "no-constant-condition": [
        "error",
        {
          "checkLoops": false,
        },
      ],
      "no-debugger": "error",
      "no-delete-var": "error",
      "no-dupe-class-members": "error",
      "no-dupe-else-if": "error",
      "no-dupe-keys": "error",
      "no-duplicate-case": "error",
      "no-empty": "error",
      "no-empty-pattern": "error",
      "no-empty-static-block": "error",
      "no-eval": "error",
      "no-ex-assign": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-func-assign": "error",
      "no-global-assign": "error",
      "no-import-assign": "error",
      "no-irregular-whitespace": "error",
      "no-loss-of-precision": "error",
      "no-misleading-character-class": "error",
      "no-new-func": "error",
      "no-new-native-nonconstructor": "error",
      "no-new-wrappers": "error",
      "no-nonoctal-decimal-escape": "error",
      "no-obj-calls": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-self-assign": "error",
      "no-setter-return": "error",
      "no-shadow-restricted-names": "error",
      "no-sparse-arrays": "error",
      "no-template-curly-in-string": "error",
      "no-this-before-super": "error",
      "no-throw-literal": "error",
      "no-unassigned-vars": "error",
      "no-unexpected-multiline": "error",
      "no-unsafe-finally": "error",
      "no-unsafe-negation": "error",
      "no-unsafe-optional-chaining": "error",
      "no-unused-expressions": [
        "error",
        {
          "allowTernary": true,
        },
      ],
      "no-unused-labels": "error",
      "no-unused-private-class-members": "error",
      "no-unused-vars": [
        "warn",
        {
          "argsIgnorePattern": "^(_+$|_[^_])",
          "varsIgnorePattern": "^(_+$|_[^_])",
        },
      ],
      "no-useless-catch": "error",
      "no-useless-escape": "error",
      "no-var": "error",
      "no-with": "error",
      "prefer-const": "error",
      "prefer-object-spread": "error",
      "preserve-caught-error": "error",
      "require-yield": "error",
      "typescript/adjacent-overload-signatures": "error",
      "typescript/array-type": "error",
      "typescript/ban-tslint-comment": "error",
      "typescript/consistent-type-assertions": "error",
      "typescript/consistent-type-definitions": "error",
      "typescript/no-confusing-non-null-assertion": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-for-of": "error",
      "typescript/prefer-function-type": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
      "use-isnan": "error",
      "valid-typeof": "error",
    },
  },
  "skipped": {
    "js-plugins": [
      "regexp/confusing-quantifier",
      "regexp/control-character-escape",
      "regexp/match-any",
      "regexp/negation",
      "regexp/no-contradiction-with-assertion",
      "regexp/no-dupe-characters-character-class",
      "regexp/no-dupe-disjunctions",
      "regexp/no-empty-alternative",
      "regexp/no-empty-capturing-group",
      "regexp/no-empty-character-class",
      "regexp/no-empty-group",
      "regexp/no-empty-lookarounds-assertion",
      "regexp/no-empty-string-literal",
      "regexp/no-escape-backspace",
      "regexp/no-extra-lookaround-assertions",
      "regexp/no-invalid-regexp",
      "regexp/no-invisible-character",
      "regexp/no-lazy-ends",
      "regexp/no-legacy-features",
      "regexp/no-misleading-capturing-group",
      "regexp/no-misleading-unicode-character",
      "regexp/no-missing-g-flag",
      "regexp/no-non-standard-flag",
      "regexp/no-obscure-range",
      "regexp/no-optional-assertion",
      "regexp/no-potentially-useless-backreference",
      "regexp/no-super-linear-backtracking",
      "regexp/no-trivially-nested-assertion",
      "regexp/no-trivially-nested-quantifier",
      "regexp/no-unused-capturing-group",
      "regexp/no-useless-assertions",
      "regexp/no-useless-backreference",
      "regexp/no-useless-character-class",
      "regexp/no-useless-dollar-replacements",
      "regexp/no-useless-escape",
      "regexp/no-useless-flag",
      "regexp/no-useless-lazy",
      "regexp/no-useless-non-capturing-group",
      "regexp/no-useless-quantifier",
      "regexp/no-useless-range",
      "regexp/no-useless-set-operand",
      "regexp/no-useless-string-literal",
      "regexp/no-useless-two-nums-quantifier",
      "regexp/no-zero-quantifier",
      "regexp/optimal-lookaround-quantifier",
      "regexp/optimal-quantifier-concatenation",
      "regexp/prefer-character-class",
      "regexp/prefer-d",
      "regexp/prefer-plus-quantifier",
      "regexp/prefer-predefined-assertion",
      "regexp/prefer-question-quantifier",
      "regexp/prefer-range",
      "regexp/prefer-set-operation",
      "regexp/prefer-star-quantifier",
      "regexp/prefer-unicode-codepoint-escapes",
      "regexp/prefer-w",
      "regexp/simplify-set-operations",
      "regexp/sort-flags",
      "regexp/strict",
      "regexp/use-ignore-case",
    ],
    "not-implemented": [
      "no-useless-assignment",
      "prefer-regex-literals",
      "object-shorthand",
      "no-restricted-syntax",
      "@typescript-eslint/naming-convention",
      "local/only-arrow-functions",
      "local/argument-trivia",
      "local/no-in-operator",
      "local/debug-assert",
      "local/no-keywords",
      "local/jsdoc-format",
      "local/js-extensions",
      "local/no-array-mutating-method-expressions",
      "local/no-direct-import",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/consistent-return",
      "@typescript-eslint/consistent-type-exports",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-qualifier",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-readonly",
      "@typescript-eslint/prefer-readonly-parameter-types",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
      "@typescript-eslint/strict-void-return",
    ],
    "type-aware": [],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "no-return-await",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;

exports[`typescript merge > typescript--merge 1`] = `
{
  "config": {
    "$schema": "./node_modules/oxlint/configuration_schema.json",
    "categories": {
      "correctness": "error",
      "perf": "error",
    },
    "env": {
      "builtin": true,
      "node": true,
    },
    "ignorePatterns": [
      "**/node_modules/**",
      "built/**",
      "tests/**",
      "lib/**",
      "src/lib/*.generated.d.ts",
      "scripts/**/*.js",
      "scripts/**/*.d.*",
      "internal/**",
      "coverage/**",
    ],
    "overrides": [
      {
        "files": [
          "**/*.ts",
          "**/*.tsx",
          "**/*.mts",
          "**/*.cts",
        ],
        "rules": {
          "constructor-super": "off",
          "no-class-assign": "off",
          "no-const-assign": "off",
          "no-dupe-class-members": "off",
          "no-dupe-keys": "off",
          "no-func-assign": "off",
          "no-import-assign": "off",
          "no-new-native-nonconstructor": "off",
          "no-obj-calls": "off",
          "no-redeclare": "off",
          "no-setter-return": "off",
          "no-this-before-super": "off",
          "no-unsafe-negation": "off",
          "no-with": "off",
          "prefer-rest-params": "error",
          "prefer-spread": "error",
        },
      },
      {
        "files": [
          "**/*.mjs",
          "**/*.mts",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "__filename",
            },
            {
              "name": "__dirname",
            },
            {
              "name": "require",
            },
            {
              "name": "module",
            },
            {
              "name": "exports",
            },
          ],
        },
      },
      {
        "files": [
          "src/**",
        ],
        "rules": {
          "no-restricted-globals": [
            "error",
            {
              "name": "setTimeout",
            },
            {
              "name": "clearTimeout",
            },
            {
              "name": "setInterval",
            },
            {
              "name": "clearInterval",
            },
            {
              "name": "setImmediate",
            },
            {
              "name": "clearImmediate",
            },
            {
              "name": "performance",
            },
          ],
        },
      },
      {
        "files": [
          "src/harness/**",
          "src/testRunner/**",
        ],
        "rules": {
          "no-restricted-globals": "off",
        },
      },
      {
        "files": [
          "src/lib/*.d.ts",
        ],
        "rules": {
          "no-restricted-globals": "off",
          "no-shadow-restricted-names": "off",
          "no-unused-vars": "off",
          "no-var": "off",
          "typescript/no-unsafe-function-type": "off",
          "typescript/no-wrapper-object-types": "off",
          "typescript/prefer-function-type": "off",
          "typescript/unified-signatures": "off",
        },
      },
      {
        "files": [
          "src/lib/es2019.array.d.ts",
        ],
        "rules": {
          "typescript/array-type": "off",
        },
      },
    ],
    "plugins": [
      "typescript",
    ],
    "rules": {
      "eqeqeq": "error",
      "no-array-constructor": "error",
      "no-case-declarations": "error",
      "no-empty": "error",
      "no-empty-function": "error",
      "no-extra-bind": "error",
      "no-fallthrough": "error",
      "no-new-func": "error",
      "no-new-wrappers": "error",
      "no-prototype-builtins": "error",
      "no-redeclare": "error",
      "no-regex-spaces": "error",
      "no-template-curly-in-string": "error",
      "no-throw-literal": "error",
      "no-unexpected-multiline": "error",
      "no-var": "error",
      "prefer-const": "error",
      "prefer-object-spread": "error",
      "preserve-caught-error": "error",
      "typescript/adjacent-overload-signatures": "error",
      "typescript/array-type": "error",
      "typescript/ban-ts-comment": "error",
      "typescript/ban-tslint-comment": "error",
      "typescript/class-literal-property-style": "error",
      "typescript/consistent-generic-constructors": "error",
      "typescript/consistent-indexed-object-style": "error",
      "typescript/consistent-type-assertions": "error",
      "typescript/consistent-type-definitions": "error",
      "typescript/no-confusing-non-null-assertion": "error",
      "typescript/no-duplicate-enum-values": "error",
      "typescript/no-empty-object-type": "error",
      "typescript/no-explicit-any": "error",
      "typescript/no-extra-non-null-assertion": "error",
      "typescript/no-inferrable-types": "error",
      "typescript/no-misused-new": "error",
      "typescript/no-namespace": "error",
      "typescript/no-non-null-asserted-optional-chain": "error",
      "typescript/no-require-imports": "error",
      "typescript/no-this-alias": "error",
      "typescript/no-unnecessary-type-constraint": "error",
      "typescript/no-unsafe-declaration-merging": "error",
      "typescript/no-unsafe-function-type": "error",
      "typescript/no-wrapper-object-types": "error",
      "typescript/prefer-as-const": "error",
      "typescript/prefer-for-of": "error",
      "typescript/prefer-function-type": "error",
      "typescript/prefer-namespace-keyword": "error",
      "typescript/triple-slash-reference": "error",
      "typescript/unified-signatures": "error",
      "unicode-bom": [
        "error",
        "never",
      ],
    },
  },
  "skipped": {
    "js-plugins": [
      "regexp/confusing-quantifier",
      "regexp/control-character-escape",
      "regexp/match-any",
      "regexp/negation",
      "regexp/no-contradiction-with-assertion",
      "regexp/no-dupe-characters-character-class",
      "regexp/no-dupe-disjunctions",
      "regexp/no-empty-alternative",
      "regexp/no-empty-capturing-group",
      "regexp/no-empty-character-class",
      "regexp/no-empty-group",
      "regexp/no-empty-lookarounds-assertion",
      "regexp/no-empty-string-literal",
      "regexp/no-escape-backspace",
      "regexp/no-extra-lookaround-assertions",
      "regexp/no-invalid-regexp",
      "regexp/no-invisible-character",
      "regexp/no-lazy-ends",
      "regexp/no-legacy-features",
      "regexp/no-misleading-capturing-group",
      "regexp/no-misleading-unicode-character",
      "regexp/no-missing-g-flag",
      "regexp/no-non-standard-flag",
      "regexp/no-obscure-range",
      "regexp/no-optional-assertion",
      "regexp/no-potentially-useless-backreference",
      "regexp/no-super-linear-backtracking",
      "regexp/no-trivially-nested-assertion",
      "regexp/no-trivially-nested-quantifier",
      "regexp/no-unused-capturing-group",
      "regexp/no-useless-assertions",
      "regexp/no-useless-backreference",
      "regexp/no-useless-character-class",
      "regexp/no-useless-dollar-replacements",
      "regexp/no-useless-escape",
      "regexp/no-useless-flag",
      "regexp/no-useless-lazy",
      "regexp/no-useless-non-capturing-group",
      "regexp/no-useless-quantifier",
      "regexp/no-useless-range",
      "regexp/no-useless-set-operand",
      "regexp/no-useless-string-literal",
      "regexp/no-useless-two-nums-quantifier",
      "regexp/no-zero-quantifier",
      "regexp/optimal-lookaround-quantifier",
      "regexp/optimal-quantifier-concatenation",
      "regexp/prefer-character-class",
      "regexp/prefer-d",
      "regexp/prefer-plus-quantifier",
      "regexp/prefer-predefined-assertion",
      "regexp/prefer-question-quantifier",
      "regexp/prefer-range",
      "regexp/prefer-set-operation",
      "regexp/prefer-star-quantifier",
      "regexp/prefer-unicode-codepoint-escapes",
      "regexp/prefer-w",
      "regexp/simplify-set-operations",
      "regexp/sort-flags",
      "regexp/strict",
      "regexp/use-ignore-case",
    ],
    "not-implemented": [
      "no-useless-assignment",
      "prefer-regex-literals",
      "object-shorthand",
      "no-restricted-syntax",
      "@typescript-eslint/naming-convention",
      "local/only-arrow-functions",
      "local/argument-trivia",
      "local/no-in-operator",
      "local/debug-assert",
      "local/no-keywords",
      "local/jsdoc-format",
      "local/js-extensions",
      "local/no-array-mutating-method-expressions",
      "local/no-direct-import",
    ],
    "nursery": [
      "getter-return",
      "no-undef",
      "no-unreachable",
      "@typescript-eslint/prefer-optional-chain",
      "@typescript-eslint/consistent-return",
      "@typescript-eslint/consistent-type-exports",
      "@typescript-eslint/dot-notation",
      "@typescript-eslint/no-unnecessary-condition",
      "@typescript-eslint/no-unnecessary-qualifier",
      "@typescript-eslint/no-unnecessary-type-conversion",
      "@typescript-eslint/no-unnecessary-type-parameters",
      "@typescript-eslint/no-useless-default-assignment",
      "@typescript-eslint/prefer-find",
      "@typescript-eslint/prefer-readonly",
      "@typescript-eslint/prefer-readonly-parameter-types",
      "@typescript-eslint/prefer-regexp-exec",
      "@typescript-eslint/prefer-string-starts-ends-with",
      "@typescript-eslint/strict-void-return",
    ],
    "type-aware": [
      "@typescript-eslint/no-unnecessary-type-assertion",
      "@typescript-eslint/await-thenable",
      "@typescript-eslint/no-array-delete",
      "@typescript-eslint/no-base-to-string",
      "@typescript-eslint/no-confusing-void-expression",
      "@typescript-eslint/no-deprecated",
      "@typescript-eslint/no-duplicate-type-constituents",
      "@typescript-eslint/no-floating-promises",
      "@typescript-eslint/no-for-in-array",
      "@typescript-eslint/no-implied-eval",
      "@typescript-eslint/no-meaningless-void-operator",
      "@typescript-eslint/no-misused-promises",
      "@typescript-eslint/no-misused-spread",
      "@typescript-eslint/no-mixed-enums",
      "@typescript-eslint/no-redundant-type-constituents",
      "@typescript-eslint/no-unnecessary-boolean-literal-compare",
      "@typescript-eslint/no-unnecessary-template-expression",
      "@typescript-eslint/no-unnecessary-type-arguments",
      "@typescript-eslint/no-unsafe-argument",
      "@typescript-eslint/no-unsafe-assignment",
      "@typescript-eslint/no-unsafe-call",
      "@typescript-eslint/no-unsafe-enum-comparison",
      "@typescript-eslint/no-unsafe-member-access",
      "@typescript-eslint/no-unsafe-return",
      "@typescript-eslint/no-unsafe-type-assertion",
      "@typescript-eslint/no-unsafe-unary-minus",
      "@typescript-eslint/non-nullable-type-assertion-style",
      "@typescript-eslint/only-throw-error",
      "@typescript-eslint/prefer-includes",
      "@typescript-eslint/prefer-nullish-coalescing",
      "@typescript-eslint/prefer-promise-reject-errors",
      "@typescript-eslint/prefer-reduce-type-parameter",
      "@typescript-eslint/prefer-return-this-type",
      "@typescript-eslint/promise-function-async",
      "@typescript-eslint/related-getter-setter-pairs",
      "@typescript-eslint/require-array-sort-compare",
      "@typescript-eslint/require-await",
      "@typescript-eslint/restrict-plus-operands",
      "@typescript-eslint/restrict-template-expressions",
      "@typescript-eslint/return-await",
      "@typescript-eslint/strict-boolean-expressions",
      "@typescript-eslint/switch-exhaustiveness-check",
      "@typescript-eslint/unbound-method",
      "@typescript-eslint/use-unknown-in-catch-callback-variable",
    ],
    "unsupported": [
      "no-dupe-args",
      "no-octal",
      "dot-notation",
      "no-return-await",
      "no-undef-init",
    ],
  },
  "warnings": [],
}
`;
